--- a/index.Rmd
+++ b/index.Rmd
@@ -1,18 +1,22 @@
 ---
 title: "Chris Acuff"
-image: "acuff_headshot.png"
+image: "REU_headshot2.JPG"
 links:
-  - LinkedIn: "https://linkedin.com/in/cjacuff"
-  - Twitter: "https://twitter.com/cjacuff"
-  - GitHub: "https://github.com/acuff"
-  - Email: "mailto:Christopher-Acuff@utc.edu"
+  - label: UTC
+    url: "https://go.utc.edu/acuff"
+  - label: LinkedIn
+    url: "https://linkedin.com/in/cjacuff"
+  - label: GitHub
+    url: "https://github.com/acuff"
+  - label: Email
+    url: "mailto:Christopher-Acuff@utc.edu"
 output:
   postcards::trestles
 ---
  
 ## Bio
 
-Dr. Christopher Acuff is an Assistant Professor of Public Administration in the Department of Political Science and Public Service at UTC. He holds a Ph.D. in Political Science from University of Tennessee at Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, assessing equity in municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses on public administration, public policy, and American government at both the graduate and undergraduate levels. 
+Dr. Christopher Acuff is a UC Foundation Associate Professor of Public Administration and Graduate Program Director in the Department of Political Science & Public Service at the University of Tennessee at Chattanooga. He holds a Ph.D. in Political Science from University of Tennessee, Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, assessing equity in municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses on public administration, public policy, and American government at both the graduate and undergraduate levels. 
 
 ## Education
 
@@ -30,6 +34,6 @@ B.A. in Political Science | 2009
 
 ## Experience
 
-**The University of Tennessee at Chattanooga** | Assistant Professor of Public Administration | 2018 - Present
+**The University of Tennessee at Chattanooga** | UC Foundation Associate Professor of Public Administration | 2018 - Present
 
 **Tennessee Bureau of Workers' Compensation** | Statistical Research Analyst | 2017 - Present
